图神经网络入门

--- a/2022年会话推荐综述.md
+++ b/2022年会话推荐综述.md
@@ -149,3 +149,71 @@ s = {o1,o2, . . . ,o |s |}.
 （2） 在下一部分会话建议中，输出是完成当前会话的交互（项目）列表；
 （3）在下一次会议建议中，输出是组成下一次会议的补充互动（项目）列表
 
+### 2.7 挑战
+
+针对2.5.5 对于会话提出的5个属性 提出了相对应的5个挑战
+
+#### 2.7.1 会话长度
+
+根据会话长度，会话大致可分为三种类型：长会话、中会话和短会话，而长会话、中会话和短会话的具体定义可能因特定数据集而异 
+
+| 会话   | 描述                                                         | 挑战                                                         |
+| ------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 长会话 | 一个长会话包含相对较多的交互，例如超过10次。总的来说，通过更多的互动，长时间的会话可以提供更多的上下文信息，以获得更准确的建议。然而，由于用户行为的不确定性，长会话更有可能包含与其中其他交互无关的随机交互。这会带来嘈杂的信息，从而降低建议的性能 | 第一个挑战是如何有效地减少不相关交互中的噪声信息。另一个挑战是如何有效地学习复杂的依赖关系以获得更好的推荐性能 |
+| 中会话 | 中等会话通常包含中等数量的交互，例如4到9次。根据我们对电子商务行业交易记录生成的会话数据的观察，中间会话是最常见的情况。与长会话和短会话相比，中等会话不太可能包含太多不相关的交互，而它通常包含基于会话的推荐（SBR）所需的上下文信息。 | 即如何有效地提取相关和准确的上下文信息以获得准确的建议。     |
+| 短对话 | 一个简短的会话包含非常有限的交互，例如，通常少于4次，导致可供推荐的信息有限。例如，在由两个交互组成的脱机匿名会话中，可以用来推荐第二个交互（项目）的唯一上下文信息是会话中的第一个交互。一种极端情况是建议会话的第一次交互。 | 如何在有限的背景信息下有效地提出建议                         |
+
+#### 2.7.2  内部顺序 （会话内是否存在顺序）
+
+| 内部顺序 | 描述                                                         | 挑战                                                         |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 无序对话 | 无序会话包含的交互之间没有任何时间顺序，也就是说，会话中的交互发生得早或晚没有区别。因此，通常使用的序列模型不适用。与顺序依赖相比，基于共现的依赖通常相对较弱且模糊，更难学习。此外，交互之间大多数基于共现的依赖关系都是集体依赖关系，即会话中的多个上下文交互协同导致下一个交互的发生，而下一个交互更难捕获。 | 如何有效地学习交互之间相对较弱和模糊的依赖关系，尤其是那些集体依赖关系 |
+| 有序对话 | 有序会话包含多个具有严格顺序的交互，它们之间通常存在强的顺序依赖关系 | 长顺序会话中有效学习级联的长期顺序依赖是一个挑战             |
+| 灵活安排 | 灵活排序的会话既不是完全无序的，也不是完全有序的，即会话的某些部分是有序的，而其他部分不是 须仔细考虑和准确了解灵活排序会话中的复杂依赖关系 | 来自于如何有效地学习复杂和混合的依赖关系，即有序交互之间的顺序依赖关系和无序交互之间的非顺序依赖关系 |
+
+#### 2.7.3 动作类型
+
+| 动作类型 | 描述                                                         | 挑战                                                         |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 单一动作 | 单一类型的操作会话仅包括一种类型的操作，例如单击项目，因此只有一种类型的依赖关系来自同一类型的操作，这相对容易学习 | 很好学习                                                     |
+| 多种动作 | 一个多类型的动作会话包括多种类型的动作[54]，从而导致多种类型的交互。在多类型操作会话中存在复杂的依赖关系。具体来说，依赖性不仅存在于同一类型的交互上（例如，点击项目），还存在于不同类型的交互上（例如，点击和购买）。 | 如何有效准确地了解行动内和行动间类型的依赖关系，以获得准确的建议 |
+
+#### 2.7.4 用户信息
+
+| 用户信息 | 描述                                                         | 挑战                                                         |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 不匿名   | 非匿名会话包含与相关用户信息的非匿名交互，从而支持同一用户在不同时间生成的不同会话之间的连接。这使得了解用户的长期偏好以及其在会话中的演变成为可能 | 准确地了解个性化的长期偏好，而不是多个非匿名会话，这是一个相当具有挑战性的问题 |
+| 匿名     | 在匿名会话中，由于缺少连接同一用户生成的多个会话的用户信息，因此几乎不可能为当前会话收集以前的历史会话。因此，只有来自当前会话的上下文信息才能用于建议。 | 利用有限的上下文信息精确捕获用户的个性化偏好以提供准确的推荐是一个挑战 |
+
+#### 2.7.5 会话数据结构
+
+| 数据结构 | 描述                                                         | 挑战                                                         |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 单级会话 | 单级会话数据集通常是一组匿名会话，其中每个会话由多个没有属性信息或历史会话信息的交互组成。在这种情况下，建议只能使用单级依赖项，即会话内的交互依赖项。因此，由于缺乏其他级别的辅助信息，基于单级别会话数据构建的SBRS很容易受到冷启动或数据稀疏问题的影响 | 即当只有交互依赖关系可用时，如何克服冷启动和稀疏性问题以获得准确的建议 |
+| 多级会话 | 多级会话数据涉及至少两个级别的层次结构，即交互级别加属性级别和/或会话级别。在这种情况下，每个级别内和不同级别之间的依赖关系都会影响后续的建议。例如，多个项目的类别（属性级别）可能会影响这些项目是否会在一个会话中一起购买（交互级别） | 如何全面了解级别内和级别间的依赖关系以获得有效和准确的建议，成为构建在多级会话数据上的SBRS面临的一个关键挑战 |
+
+## 3  SBRS方法的分类和比较 
+
+分类部分 这里写了个大概 还得仔细去看
+
+[![](https://s1.ax1x.com/2022/06/07/XDgb1x.md.png)](https://imgtu.com/i/XDgb1x)
+
+三大方法为 常规SRS方法 潜在特征方法 深度神经网络方法
+
+### 3.1 常规方法
+
+[![](https://s1.ax1x.com/2022/06/07/XD2d81.md.png)](https://imgtu.com/i/XD2d81)
+
+### 3.2  SBRSs的潜在表示方法 
+
+ SBRSs的潜在表示方法首先使用浅层模型为会话内的每个交互构建低维潜在表示。学习到的信息表示对这些交互之间的依赖关系进行编码，然后将用于后续基于会话的建议 
+
+[![](https://s1.ax1x.com/2022/06/07/XD4aXq.md.png)](https://imgtu.com/i/XD4aXq)
+
+### 3.3  SBRSs的深度神经网络方法 
+
+[![](https://s1.ax1x.com/2022/06/07/XD5VbV.md.png)](https://imgtu.com/i/XD5VbV)
+
+## 4.  SBRS应用程序、算法和数据集 
+
+### 4.1 SBRS应用 
