研究的艺术

--- a/模型调参.md
+++ b/模型调参.md
@@ -38,7 +38,7 @@ https://www.bilibili.com/video/BV1vQ4y1e7LF
 
 搜索空间
 
-[![](https://s1.ax1x.com/2022/06/26/jEe2l9.md.png)](https://imgtu.com/i/jEe2l9)
+[![](https://s1.ax1x.com/2022/06/26/jEeyYF.md.png)](https://imgtu.com/i/jEeyYF)
 
 ### 算法1 黑盒算法
 
@@ -89,7 +89,7 @@ m n 的选取 取决于 你的预算花销
 
 每次都是用不同的m 和 n 
 
-影响是 对于 m n的选取 没那么打的影响
+影响是 对于 m n的选取 没那么大的影响
 
 [![jEegSJ.md.png](https://s1.ax1x.com/2022/06/26/jEegSJ.md.png)](https://imgtu.com/i/jEegSJ)
 
