--- a/研究的艺术.md
+++ b/研究的艺术.md
@@ -2,7 +2,7 @@
 title: 研究的艺术
 ---
 
-## 研究
+## 第一部分 研究
 
 读者知道什么 想要知道什么
 
@@ -24,7 +24,7 @@ title: 研究的艺术
 
 对于 对方的方便 以及更好的理解
 
-## 和读者进行连接
+## 第二部分 和读者进行连接
 
 ### 写作是一个想象中的对话
 
@@ -54,11 +54,77 @@ title: 研究的艺术
 2. 会不会做标准的一些问句 来反对解决方案
 3. 是不是特别关心我是怎么一步一步的解决问题
 
-## 去讲故事
+## 第三部分 话题到问题
+
+针对领域 选择一个针对的话题。话题是一个途径去让你问问题，问题回答得好 别人就会有兴趣 整个领域的人都会有感兴趣。
+
+1. 针对话题问问题
+2. 问题的答案 别人会觉得比较重要 答案能在一定程度上改变领域
+
+### question or problem
+
+1. question不一定会带来问题
+2. question是一个找到问题的途径
+3. 在学界 我们主要是解决problem 而不是question
+
+### 兴趣去找话题
+
+1. 怎么把效果做出来（提出算法 之前不行 现在很行）
+2. 做大 （数据更大 规模更大）
+3. 做便宜 
+4. 做安全点
+
+### 话题 缩小 到能研究的东西
+
+1. 话题 转换成 论点
+2. 针对话题 去问问题(找到解决方法 更能针对的去读文献)
+
+### so what！
+
+当你对一个问题感兴趣的时候 你应该去问一个更难的问题
+
+1. 能不能带来好处
+
+2. 能不能推动领域发展
+
+3. 能不能启发工作
+
+4. 如果不做 整个领域会不会有损失
+
+你最后的工作要别人值得去读，如果一个工作对自己和对别人来说 不知道有什么价值。可以考虑放弃这个工作。
+
+如何问一个更难的问题（so what）
+
+1. 列出话题
+
+2. 话题加一个间接的问题（indirect question）
+
+   1. 含有w词 who what when how where
+
+3. 评估问题的重要性 
+
+找到的问题 是领域关心的问题 （这时候就不需要在意东西的意义在什么位置）
+理工科领域 如果能很好解决痛点 一般是有意义 想一想事情的意义
+
+### question to problem（疑问到解决问题）
+
+通过三步来判断疑问是不是一个值得解决的问题
+
+1. topic
+2. 回答topic 的 question
+3. 找到意义
+
+这样 就能很好的找到了一个解决问题的problem
+
+一直去问so what（面向读者的角度） 直到 觉得什么时候 可以停 
+
+### 找到好的研究问题（很难）
+
+1. 找人帮忙
+2. 读的时候去找问题
+3. 写作中找
 
 
-
-## 去写故事
 
 
 
