数据库文档

--- a/基于知识细粒度查询设计方案.md
+++ b/基于知识细粒度查询设计方案.md
@@ -12,9 +12,9 @@ title: 基于知识细粒度查询设计方案(使用手册)
 
 ## 2. 爬虫获取
 
-项目爬虫功能是一个代码开源的软件来完成对应的功能（图片要换）
+项目爬虫功能是一个代码开源的软件来完成对应的功能
 
-![1656764768642](C:\Users\warma\AppData\Roaming\Typora\typora-user-images\1656764768642.png)
+[![](https://s1.ax1x.com/2022/07/03/j3OWKs.md.png)](https://imgtu.com/i/j3OWKs)
 
 软件设计清晰 且帮助文档完善
 
@@ -22,17 +22,29 @@ title: 基于知识细粒度查询设计方案(使用手册)
 
 ## 3. 知识点提取
 
-知识点提取 是基于mooc视频中的视频提取（换图）
+这个是整个项目的难点和重点
+
+知识点提取 是基于mooc视频中的视频提取
 
 举个例子 在 python程序语言设计中RGB色彩体系这个课中，存在下列两个小的知识点。但是视频并没有对其进行区分。（没有划分出知识点的起始结束时间）
 
-![1656765274670](C:\Users\warma\AppData\Roaming\Typora\typora-user-images\1656765274670.png)
+[![](https://s1.ax1x.com/2022/07/03/j3LqBt.png)](https://imgtu.com/i/j3LqBt)
 
-![1656765317720](C:\Users\warma\Desktop\博客pic\知识点2.png)
+[![](https://s1.ax1x.com/2022/07/03/j3LLHP.md.png)](https://imgtu.com/i/j3LLHP)
 
 对于该功能的讲解 打算分成三个部分来说明
 
-### 3.1 视频关键帧提取
+### 3.1 项目介绍
+
+[![](https://s1.ax1x.com/2022/07/03/j3Lo1H.png)](https://imgtu.com/i/j3Lo1H)
+
+项目的文件夹三个 为pic text video 分别存取 图片 文字 视频的信息
+
+重要的py文件有三个 video_pic ,pic_word, json_mysql
+
+分别完成 下面介绍的 3.2 3.3 3.4 的功能
+
+### 3.2 视频关键帧提取
 
 视频的关键帧提取使用的是 基于ffmpeg的pyav库来进行存取
 
@@ -59,7 +71,7 @@ def extract_video(filename):
 
 ```
 
-#### 3.1.1 使用方式（插入图片）
+#### 3.2.1 使用方式
 
 项目文件为 video_pic
 
@@ -69,7 +81,15 @@ def extract_video(filename):
 
 run 就生成了对应视频总集文件的png
 
-### 3.2 图片信息提取
+你需要修改的位置
+
+[![](https://s1.ax1x.com/2022/07/03/j3L7jA.png)](https://imgtu.com/i/j3L7jA)
+
+运行的情况
+
+[![](https://s1.ax1x.com/2022/07/03/j3LbnI.md.png)](https://imgtu.com/i/j3LbnI)
+
+### 3.3 图片信息提取
 
 图片信息的提取，使用了百度提供的ocr服务，基本手敲了300行代码
 
@@ -98,7 +118,9 @@ run 就生成了对应视频总集文件的png
        2.	记下原topic的名称，和content
        3.	存为json存取
 
-#### 3.2.1 使用方式
+#### 3.3.1 使用方式
+
+项目文件: pic_word
 
 通过百度智能云 获得对应的api_key 和 secret_key
 
@@ -118,5 +140,40 @@ OCR_URL = 'https://aip.baidubce.com/rest/2.0/ocr/v1/general_basic'
 className = "python语言程序设计"
 ```
 
-### 3.3 
+ ![](https://s1.ax1x.com/2022/07/03/j3OqxJ.png) 
+
+### 3.4 json数据转存
+
+通过读取json数据 生成能够插入数据库的.sql文件
+
+输入：知识点json文件
+
+输出：基于课程的sql文件
+
+#### 3.4.1 使用方式
+
+```python
+className = "python语言程序设计"
+word_root = os.path.join(os.getcwd(), 'text')
+classWordRoot = os.path.join(word_root, className)
+sqlRoot = os.path.join(os.getcwd(), 'knowledgeSearch.sql')
+```
+
+在使用的时候 需要填入对应的className 和sqlroot 想要生成的sql文件名称
+
+## 4. 数据库展示
+
+本次的数据库 展示使用的是 jeecgboot来完成我们的数据库展示的功能
+
+其具体的开发开发文档：http://jeecg.com/
+
+比较好的视频文档：https://www.bilibili.com/video/BV1V34y187Y9
+
+[![](https://s1.ax1x.com/2022/07/03/j3zEp8.md.png)](https://imgtu.com/i/j3zEp8)
+
+展示功能完成了 基于 classname topic main的查询功能
+
+完成了基础的增删改
+
+且能够导入导出exel文档来进行查阅
 
