--- a/研究的艺术.md
+++ b/研究的艺术.md
@@ -57,6 +57,7 @@ title: 研究的艺术
 ## 第三部分 话题到问题
 
 针对领域 选择一个针对的话题。话题是一个途径去让你问问题，问题回答得好 别人就会有兴趣 整个领域的人都会有感兴趣。
+[![jY1Dpt.png](https://s1.ax1x.com/2022/07/04/jY1Dpt.png)](https://imgtu.com/i/jY1Dpt)
 
 1. 针对话题问问题
 2. 问题的答案 别人会觉得比较重要 答案能在一定程度上改变领域
@@ -97,11 +98,13 @@ title: 研究的艺术
 
 1. 列出话题
 
-2. 话题加一个间接的问题（indirect question）
+   [![jY1r1P.png](https://s1.ax1x.com/2022/07/04/jY1r1P.png)](https://imgtu.com/i/jY1r1P)
+3. 话题加一个间接的问题（indirect question）
 
    1. 含有w词 who what when how where
-
-3. 评估问题的重要性 
+   
+      [![jY10fI.md.png](https://s1.ax1x.com/2022/07/04/jY10fI.md.png)](https://imgtu.com/i/jY10fI)
+4. 评估问题的重要性 
 
 找到的问题 是领域关心的问题 （这时候就不需要在意东西的意义在什么位置）
 理工科领域 如果能很好解决痛点 一般是有意义 想一想事情的意义
