--- a/留学小问题.md
+++ b/留学小问题.md
@@ -1,22 +1,20 @@
 ---
 title: 留学的问题 嗯嗯
 ---
-
-
-
-## q1 如何找到相对应的信息
+## 如何找到相对应的信息
 1. 微博 小红书（消息来源）
-## q2 如何找到相对应的要求
+## 如何找到相对应的要求
 1. 通过学校的官网 会有一个对应学生的list
 	1.1 list 主要会分为985 211 一本 二本学生有其相对应的要求（学历越高 要求越低）
 	1.2 list 内会有一个成绩平均分（还有个加权平均分）如果没有明确标注 选择对自己有利的成绩进行提交
-## q3 你是如何找到机构的 如果判断机构的好坏
+## 你是如何找到机构的 如果判断机构的好坏
 1. 选择对应的老师 而不是去选择机构
 2. 主要是通过设计一些问题 看看机构老师回答的怎么样
 3. 看风评
-## q4 一个机构能帮你做什么
+## 一个机构能帮你做什么
 择校 申请 材料翻译 收offer 个人申请与简历
-## q5 你学英语是怎么学的 得准备多长时间
+
+## 你学英语是怎么学的 得准备多长时间
 自学10个月 然后 参加线下班21天 花费2w4 同机构的情况 一样 要找到好的老师 而不是一个机构（小黄鱼 用的很不错）
 雅思的口语分数很难考 得准备相对较长的时间（口语根据老哥的说法是 只有一个在一个小机构 学习了很长的时间 才拿到的6.5 ）
 英语中口语 写作较难
@@ -24,7 +22,7 @@ title: 留学的问题 嗯嗯
 
 老哥最后的成绩为 6 6 5.5 5 最后为了求稳 报了个语言班
 
-## q6 技巧
+## 技巧
 1. 有的学校不仅仅看雅思 也看 多邻国和朗思（线上朗思相较简单） 有一同学准备了7天 拿到了对应的分数
 2. 选择看市场供需 有时候 好的选择有奇效
 3. 出去学习 只是过简历关 但 整体的硬实力 还是得靠自己
