研究的艺术

--- a/研究的艺术.md
+++ b/研究的艺术.md
@@ -1,5 +1,5 @@
 ---
-title: 研究的艺术
+ title: 研究的艺术
 ---
 
 ## 第一部分 研究
@@ -129,5 +129,115 @@ title: 研究的艺术
 
 
 
+## 第四部分 怎么讲好一个故事（论证）
 
+假设研究正常展开，开展到一半或者一大半。我的读者有兴趣去看。如何让我的读者信我的东西或者说使大家相信我的新方法。通过讲一个故事，使读者信我们的东西。
 
+### 故事 和 信息搜索
+
+故事 是 给我们收集信息 给定一个方向（做实验）
+
+而同样的 故事 也能回答读者可以预测的问题，研究还剩下多少东西能做
+
+而同样 在故事发生变更的情况下，可能需要重新去做实验，在不同的超参数或者不同的情况，甚至需要更换数据集。
+
+一边做实验一边讲故事，早一点讲故事给想出来。
+
+最后的来说
+
+跟读者做一个合作探索，达到相同的一个认知水平，方法不一定是最好的。但一定要激发读者的认知，发现一个更好的想法。在方法中可以在做改进
+
+### how
+
+1. 足够多的原因和论据
+
+2. 要在读者的角度去问（为什么我要相信这个事情）和 so what 这两个问题
+
+3. 要在做研究的过程中 不断地去问这两个问题
+
+   
+
+### 做好一个论证
+
+首先要提出一个论点，用原因和证据来支撑论点。有时候你需要承认和回复一些别的观点，最后你要提供一下推理一些逻辑的原则。
+
+写作是一个假想的对话，使得在跟真人对话之前，把所有的可能性，别人攻击你的地方以及缺失的理由，论点，论据全部给补充起来。
+
+ ![](https://i0.hdslb.com/bfs/note/ff553904877ee2212ddd95a56a39b8c1e600909c.png) 
+
+1. 论点：我们核心的理由是什么东西，很多时候文章最后就是一个核心的论点，当然论点还有别的子论点支撑；
+2. 理由：为什么我们的论点是对的；
+3. 论据：一些数据点或者别人的工作；
+4. 承认和回复：对于别的一个观点的一个说明；
+5. 保证：这个逻辑是怎么样过来的，如果读者不理解的话，应该把它说出来，解释一下我们的理由为什么能解释我们的结论好； 
+
+#### 核心要干的事情（支撑论点）
+
+ 怎么用原因和论据啊来支撑你的论点：
+
+1. 用原因来支撑的话，一般会有一个因为这一个词在这个地方
+
+2. 在一般的情况下，很少只用一个理由来支撑你的论点，很有可能会用多个理由，而特别的是说，其实理由的本身它也是一个论点；
+
+什么时候可以结束说明理由：
+
+   1. 理由必须是在论据之上的，结论是基于好的原因，理由又是基于好的论据；
+   2. 所谓的论据就包括了，做实验得出来的一些实验的结果，或者前面的值得信任那些工作里面的一些论点，这个是现实存在；理由很多时候更多是一个思维的逻辑，是存在你脑海中的；
+   3. 一旦我们成功的把论点通过理由和论据支撑住了之后，被大家认可之后，我们的论点也会成为别人工作的一个论据。
+
+   4. 我们一个论点需要有原因来支持，这些原因又是在基于我们的论据上面的，所以我们要保证说原因能够合理的解释我们的论点，反过来讲每一个原因也需要有他的论据来支撑才是合理存在的；
+
+#### 使用承认和回复
+
+1. 作者提前的预测读者可能会提的一些反对意见，然后把答案写在这里，这样子在读者读的过程中心中产生问题的时候，作者就在下面就把这些问题给回答掉了。
+2. 其实回答本身不是最难的问题，最难的是说在写的时候要假设他们这些问题的存在，就是你要想到你的读者可能会提这样子的问题。
+3. 核心是说我们得尽量的去考虑到很周全，去想象你的读者会问这样子的问题；
+4. 我们的论点可能有一些反对的意见，或者不同的解释、不同的看法，这样子我们需要去承认这些东西的存在，并且给予回复 
+
+#### 用理由去支撑论文时，读者可能会看不出它们之间的关系
+
+1. 在读者看不明白的时候，需要补充说明他们之间的联系，不然读者是不会买账的；
+2. 这个补充说明一般是一些通用的原则，就是一些大家都能接触的东西，然后把它作为一个通用的原则。在这个原则之下，能够特立出我们的推理逻辑；
+3. 当原因和论点之间隔得比较远的时候，需要给出一些推理的保证，来使得读者能清楚的认识到我们的原因和论点是怎么样联系起来的。
+4. 实际上我们正在写的时候，整个逻辑可能是比较复杂的，可能就想说一个很简单的东西也可以变得比较复杂。
+5. 想把一个文章写的有理有据、滴水不漏是一件很难的事情 
+
+#### 要把argument弄得“厚一点”：
+
+在支撑论点的时候，正正反反啊都要多讲一点，因为我们的目的是要通过这些比较厚实的论述，让读者能够相信我们所说的内容； 
+
+### 关于声明
+
+声明就是对研究问题的答案，就是把答案浓缩成一句话变成声明，然后整个文章呢主要是围绕去支撑这个声明；
+
+声明要考虑那么下面这3个问题：
+1. 我在做一个什么样类别的声明：因为不同类别的声明，导致可能要支撑他的这些证据是不一样的；
+2. 声明够不够具体：因为对于比较空洞的声明，大家读起来会觉得比较空洞；
+3. 声明啊够不够重要：读者觉不觉得有必要去花一篇文章去支撑我这样子的声明；
+
+我们要解决一个有价值的问题，然后我的解决的方法本身应该也要是有价值的
+
+声明需要是具体的而且是重要的
+
+#### 怎么样把声明变得更重要一些
+
+1. 对一个大家感兴趣的话题提供新的证据；
+2. 不仅仅把数据展示出来而是要用数据去回答一个大家有争论、不那么确定的问题的答案；
+
+### 如何让论点更加可信
+
+ ![](https://i0.hdslb.com/bfs/note/ded6dbbe623973bcf5741872453f553654764d78.png) 
+
+#### 怎么样把论点变得更加可信一点：
+
+​	如果想让别人信我们说的话，最好不要把话说的特别的满；
+​		可以承认一些局限性的条件
+​		要去想的限制条件的时候，是从读者角度来出发的。从他们的角度来讲，去想想我们的理由也好我们的论据也好，在哪些地方更加薄弱一点，把这些薄弱的地方作为限制条件给出来之话，那么对整个的可信度就会增加 
+
+#### 使用一些降低语气确信度的词，使得论点显得没那么的强硬：
+
+1. 如果讲的特别自信的话，读者会觉得更加的难以置信一些；
+2. 如果用了大量这样子的不确定的词汇呢，整个文章可能会显得比较弱，别人会觉得你可能自己也不是那么的确信。
+3. 尽量要避免这些词汇：all、no one、every、always、never 
+
+## 第五部分 
