研究的艺术

--- a/研究的艺术.md
+++ b/研究的艺术.md
@@ -240,4 +240,134 @@
 2. 如果用了大量这样子的不确定的词汇呢，整个文章可能会显得比较弱，别人会觉得你可能自己也不是那么的确信。
 3. 尽量要避免这些词汇：all、no one、every、always、never 
 
-## 第五部分 
+## 第五部分 理由、论证 
+
+### 读者怎么看待理由和论证
+
+	1. 读者首先会去看我们论述的核心（论点和它的一些支撑的论据）；
+ 	2. 对于支撑来说，读者会先去看我们提过的那一些理由，然后去看一下它是不是有道理；
+ 	3. 如果理由靠谱的话，读者会去看它的整个逻辑，然后把它排好序，读者会顺着这个思路往下看，看看这个逻辑是不是过得去；
+ 	4. 如果这些理由看上去还不错的话，那么接下来他去会去看论据，论据是整个论述的一个基石，论据理应是不容质疑的，但是如果读者不相信你的论据的话，那么他也就不会相信我们的理由。
+ 	5. 核心是说，我们有一个论点，然后通过理由，这个是能够架在我们的论据上面，理由是能够撑住你的论点的，如果中间任何一个部分没有做好的话，那么导致我们的论点是支撑不起来，就会导致大家不会信你 
+
+ ![img](https://i0.hdslb.com/bfs/note/e559edabb5b631c14a0894fc4d499035381f2a99.png) 
+
+### 如果要去收集整个论述要怎么办 
+
+1. 首先应该给读者提供一些合理的理由；
+2. 然后这些理由需要在一个清晰的有逻辑的顺序之下；
+3. 最后所有这些理由必须要是基于论据的，而且读者是可以接受这些论据的 
+
+### 怎么区分 论据和理由
+
+1. 不是由我们来决定什么是理由什么是论据，而是读者来决定的；
+2. 需要把整个论据写的非常的脚踏实地 
+
+### 如何评估证据好坏
+
+1. 一个好的证据必须是准确的、精确的、足够的、有代表性的和权威的；
+2. 必须要很准确的来报告证据，作为证据来讲一般来自于两种可能性：
+   从自己收集而来的（比如说做实验采集到了证据）；
+   来自于前面人的一个工作；
+3. 所以不管是哪一种都要很准确的报告你的数据怎么来的：
+   1. 对第一种来讲，要说整个实验是怎么做的，流程是什么样子，然后这数据是怎么样采集的，这需要我们能够准确的描述这个流程，而且大家是认可我们的这个方法的；
+   2. 如果论据是来自于别人方法的话，那么把证据从别人的报告搬到我们这里来的时候，要足够准确，至少是ctrl C + ctrl V过来的，不要把一些数字搞错了
+
+#### 需要证据准确
+
+精确就说不要使用这种很模棱两可的词，而要使用一些比较精确的语言；
+所谓的模棱两可的词就包括了some most many almost often usually frequently generally这都是一些比较模糊的词，我们要尽量得避免它 
+
+#### 需要足够的且有代表性
+
+文章举了个例子 
+
+即 莎士比亚 一定是 憎恨女性 （因为在麦克白和哈姆雷特里面 将女性描述成虚伪的代表）
+
+出现了两个问题
+
+1. 例子的不全面
+2. 这个例子不够有代表性 不能体现作者的意图
+
+#### 证据权威性
+
+好的会议引用好的文章 不要使用一些差很多的文章 （最好不用维基百科 这样的内容）
+
+**读者不会相信**
+
+### 总结
+
+1. 对于论点怎么样用理由和论据来支撑；
+2. 理由通常有多个而且是要合理的，而且需要用合适的顺序把它组织起来；
+3. 证据是要需要强有力的而且是读者要认可的，包括你的报告是准确的；
+4. 然后这数据的精度是合适的，全面的有代表性的以及是权威的；
+
+## 第六部分 承认和回应
+
+1. 需要去回应读者心中的那些不同的看法；
+2. 写文章的时候要去预测、承认、回应这些读者在读你文章过程中间产生出来的一些问题、反对意见和一些另外的解决方法；
+3. 难点是说，我们的写作是一个假想的对话，我们并不知道读者在真的看到我们这么写的时候的反馈，所以在这个时候，我们需要去想象读者的情况和我们要怎么样回应；
+4. 在本章节作者会告诉我们，可以从两个方法来想象读者可能会怎么样提供一些不一样的看法，然后也告诉大家怎么样去承认和回复这样子的看法；
+5. 读者通常有两种方法去挑战我们说的东西：
+   1. 内在的完备性，也就是说他们会挑战论点是不是讲的很清楚，然后理由是不是相关的，以及说论据的质量是怎么样的；
+   2. 外部的完备性：包括了 是不是有一个别的方法来重新来讲我们的问题，或者是说 是不是有一些我们自己没有注意到论据，还有是说 是不是有别人的工作也写过相似的一些话题，但是他们提供了不一样的意见，我们并没有引用他们； 
+
+### 如何找到没有发现的问题（很难）
+
+1. 这是一个很难的事情，比如已经花了很多时间去想象各种理由、各种证据的好坏，如果读者还是有一些不一样的问题的话，那肯定是没有想到的，当时如果已经花了很长时间的话，那再花更多时间可能也不一定能想到；
+   所以要去找别人来看一看，因为别人看的话，反正他也不知道你怎么想的，所以他没有先验的偏见，也许他可以提供一些不一样的看法；
+
+2. 所以在做研究的时候，时不时找人（不管是同学、师兄师姐、师弟师妹或者是导师或者是同事）能够让他们来帮忙看一看现在有的东西也是非常有用的；
+
+3. 如果还是找不到怎么办，作者给大家提供了一些问题可以去问自己，就当自己是读者，从这些方向去看，看看是不是能够找出什么漏洞出来：
+
+   1. 这为什么是一个问题（问题应该是指我们所研究的东西）？因为有时候问题可能不是真正存在，只是我们构造出来的或者你想象出来的啊
+
+   2. 问题是不是已经很好地定义；（有时候 定义清晰 就很解决问题）
+
+4. 看看自己的解决方案：
+      
+       ![img](https://i0.hdslb.com/bfs/note/fac77f74023063c0b3140df86ed1730465a3d1f1.png) 
+      
+      1. 如果解决方式是实用的话，你必须要提供一个更好的更实用的方法；
+      2. 如果你解决方式是概念上的，就不应该要仅仅指出这个东西存在，要提供一个不一样的看法
+      3. 声明是不是太强了，所有的东西是不是能支撑那么强的声明，能不能想出一些反例或者局限性出来；
+      4. 为什么我们的方法要比别人的好，通过什么的论据来证明 或为什么这些概念上的一个新的看法比别人要好； 
+
+### 看一下自己这些原因和论据
+
+1. 能不能提供一些别的种类的论据；
+2. 有很多数字但可能希望一些关于真实案例的情况，或者说只有一些真实的案例但是并没有统计上的一些数字；
+3. 所有的论据可以去看它的一个质量（是否准确、精度是不是高、是不是有代表性、是不是权威的）；
+   最难的是说，需要更多的证据；
+4. 我们可以用这些问题来客观的去看你现在有的所有的东西，从而发现你的论述中间薄弱的一些地方，在找到论述里面的薄弱点之后，接下来要去决定我们应该把哪一些拿出来写。
+5. 如果你承认了太多不一样的观点的话，会导致你的文章很长，别人会觉得说你说了那么多有的没的，那么你的自己的方案在哪里；如果你承认太少，别人会觉得说你可能想地不够深入，你的置信度就没那么高，所以我们需要有一个合适的一个平衡点； 
+
+你需要更多的证据
+
+### 可能会遇到一些问题是无法回答的：
+
+1. 要纠正一个思想是说我们的文章解决了某一个问题的所有，在绝大部分的情况下，我们的研究工作，只是回答了一个小的问题的一部分，所以肯定会漏想了一些别的部分，以及说跟这个问题更大的一些问题的东西，可能是无法回答的；
+2. 有时候承认自己无法回答别的问题也很正常了，大家也是这么理解的。对于无知来讲，知道自己无知的无知和不知道自己无知的无知，后者当然更加无知一点，所以宁可自己做前者。 
+
+## 第七部分 推理的保证
+
+五点建议
+
+ ![img](https://i0.hdslb.com/bfs/note/b67bf1690924837bc5d864b4afb663fc4a18b8a2.png) 
+
+### 让我们看看准则或者公理是不是合适的：
+
+1. 它是不是有道理的，因为我们对一个这样的担保，通常不会用原因去证明它是合理的，所以你至少让读者觉得他是一个合理的；
+2. 这个是不是它覆盖面不用特别广，因为如果一个担保想覆盖更多通用的情况下，就会显得它更加的薄一点，可能反例就更多一点。很多时候我们只要这个担保，能够足够覆盖到论点和原因就行了。
+3. 有没有别的一些更好的担保，有时候我们在数学里面做公理的时候，当我们要选一个最好的一个公理而不是选一些公理下面的一些东西；
+4. 对于我们的这个领域（大家的研究文章都是发在某个领域上面）是不是合适的，就这个领域的人能不能接受这样子的观点；
+5. 我们得覆盖住论点和原因；
+
+### 什么时候需要用到担保
+
+1. 读者是在领域之外的时候（写教科书的时候经常会用它），大量的新来读者不清楚里面的一些隐藏逻辑，把它给大家讲出来是非常有用的，不然读者可能会看不懂。如果说发一篇文章，必须要是自然杂志的话，它的读者相对来说比较广的时候，也尽量要把这个领域相关的一些东西给大家写出来，让大家明白我们的这一个逻辑；
+2. 如果我们使用的原则对这个领域的读者来说，比较新或者是有争议的时候，也应该把它讲一讲；
+3. 当我们的论点特别有争议性可能读者觉得很难接受的时候，那么在大家都会接受的情况下在前面说一些准则（如果他接受第一句，然后再过渡到第二句的时候）就显得没那么难接受一些
+
+我们选择去把这样子担保说出来时候，意味着是说我们其实关心读者，生怕他不懂我在说什么，所以把前面这一些逻辑给他们交代的更清楚； 
