视觉知识追踪

--- a/论文分析的板子.md
+++ b/论文分析的板子.md
@@ -24,9 +24,11 @@ title: 论文分析的板子
 
 ## 2. 实证分析
 
-## 3. 方法（基本为论文方法部分）
+## 3. 问题描述
 
-## 4. 总结
+## 4. 方法（基本为论文方法部分）
 
-## 5. 自己的想法
+## 5. 总结
+
+## 6. 自己的想法
 
