--- a/数据分析.md
+++ b/数据分析.md
@@ -2,6 +2,14 @@
 title: 训练集和数据集数据探索
 ---
 
+# 说些废话
+
+链接：https://www.bilibili.com/video/BV11L411j7sX
+
+https://www.kaggle.com/competitions/elo-merchant-category-recommendation
+
+比赛 很不错 但是 现在 没有时间去看
+
 # 数据分析
 
 [![qV4oss.png](https://s1.ax1x.com/2022/03/20/qV4oss.png)](https://imgtu.com/i/qV4oss)
