--- a/毕业论文思路.md
+++ b/毕业论文思路.md
@@ -23,3 +23,35 @@ https://zhuanlan.zhihu.com/p/420469399
 1. 生成视频目录
 2. 视频信息ocr读取
 
+
+
+## 我是一个来自 7月2号的作者
+
+这个项目 其实 做完了 使用了jeccg-boot 完成了搜索框的 功能
+
+github 链接 是 https://github.com/limhao/lab-work
+
+该项目 有较大帮助的有
+
+jeecgboot：http://doc.jeecg.com/2043874#JAVA_jeecgboot_11
+
+然后 出现的较大问题有
+
+1. 数据库的合法输入问题（导致 我一直在删数据库内容）
+2. 作为一个项目来说 这个项目还是不太完备 
+3. 我这个里面没有用到深度学习的技巧 因为咱还是没找到对应的数据集
+
+## 我是一个2022/8/3 的作者
+
+想法怪多 
+
+1. 做一个视频推荐的功能
+2. 视频的内容划分
+3. 这个功能要是能做成那种 同步上传 然后 直接增加到数据库那种 （热部署）
+4. 推荐的可视化（哇 我真的是越来越开心了）
+
+目前 能感知到的技术要求
+
+1. 模型的线上部署
+2. 搜索框的功能完善
+3. 模型的训练的问题
