--- a/1. centos安装.md
+++ b/1. centos安装.md
@@ -42,7 +42,7 @@ systemctl list-unit-files | grep sshd
 ![img](https://img-blog.csdnimg.cn/20200420134001428.png) 
 
 ```shell
-## 查看centos地址
+## 查看centos地址 嗯
 ifconfig -a
 ```
 
