--- a/服务器使用的问题.md
+++ b/服务器使用的问题.md
@@ -12,10 +12,24 @@ title: 服务器使用的问题
 
 还有一个 是我在编码过程中 总结的一些小窍门
 
-1. 缩小数据集 - 目的是本地的debug1 以及 快速的验证
+1. 缩小数据集 - 目的是本地的debug 以及 快速的验证
 2. 远程连接时的注意点 - 啊哈 咱忘了 以后再补！
 3. 进程守护 - 使用jupyterlab teimial 来跑文件 
 4. 多卡的优势 - cuda0 cuda1 一个机器 同时跑两个 怪快的
+5. 如果碰到了 要关闭远程连接工具 一直连接的指令 这个要和3 一起食用
+
+```python 
+# 开启nohup  且 日志重定向
+nohup python -u main.py > log.out 2>&1 &
+# 关闭nohup 
+ps -ef | grep train
+kill -9 ****#pid为每一行的第二个id编码，表示的是该进程的父进程）
+# 突然想到一个方法可以获得pid进程号 cuda程序
+nvidia-smi
+kill -9 **** # **** 为 pid 进程号
+# 实时查看日志
+tail -f train.log
+```
 
 ## 要干的活： 上传数据集
 
