--- a/感觉是最好的知识追踪入门提升论文.md
+++ b/感觉是最好的知识追踪入门提升论文.md
@@ -10,7 +10,10 @@ PYKT: A Python Library to Benchmark Deep Learning based Knowledge Tracing Models
 
 https://arxiv.org/pdf/2206.11460.pdf
 
+作者试图回答两个问题
 
+1.  什么是DLKT算法的合理、可靠和现实的评估过程？ 
+2.  学生数据、模型设计和预测情景的不同特征如何影响模型性能 ？
 
 ## 0 问题定义
 
@@ -30,7 +33,9 @@ t 学生的响应时间戳
 
 DKT, DKT+, DKT-F,KQN
 
-KQN：使用学生知识状态编码器和技能编码器通过点积来预测学生的反应表现
+KQN：使用学生知识状态编码器和技能编码器通过点积来预测学生的反应表现，通过点积预测学生反应
+
+KQN 可以看看 很像啊 我不说是啥 很像双塔的说
 
 2. 内存增强模型
 
@@ -54,13 +59,35 @@ AKT,SAKT,SAINT
 
 例如SKVMN
 
-## 2 数据处理
+## 2 数据集
 
-1. 去除空值和重复值 以及 交互数量小于三的集合
-2. 20% 80%
-3. 将问题拆解成kc子序列进行训练和验证（当一个问题有多个KC时，通过多次重复回答）
+- Statics2011:此数据集收集自2011年秋季在卡内基梅隆大学教授的工程静力学课程[33]。 由[6,10,46]推荐，通过串联问题名和步骤名来构造唯一问题。 
+- ASSISTments2009:此数据集由2009-2010学年从免费在线辅导辅助平台收集的数学练习组成。 在过去的十年中，该数据集被广泛使用，并已成为KT方法的标准基准[1,9,10,23,43,46]。 
+- Assistments2015:与Assistments2009类似，此数据集是2015年从Assistments平台收集的。 此数据集是其他辅助数据集中学生人数最多的 
+-  Algebra2005:此数据集来自KDD Cup 2010 EDM挑战赛，包含13-14岁学生对代数问题的回答[32]。 它包含详细的步骤级学生响应。 独特的问题结构类似于Statics2011中使用的过程。 
+- Bridge2006:此数据集也来自KDD杯2010 EDM挑战赛，其独特的问题构造类似于Statics2011中使用的过程。 
+- NIPS34:此数据集来自NeurIPS 2020教育挑战赛的任务3和4。 它包含学生对多项选择诊断性数学问题的答案，并从EEDI平台收集[40]。 对于每个问题，我们选择使用主题树中的叶节点作为其KCS。 
+- POJ：本数据集由编程练习组成，收集自北京编码实践在线平台。 该数据集最初是由Pandey和Srivastava[24]刮取的。 
 
-## 3 训练
+## 现实世界的预测场景
+
+步骤1
+
+在KC响应数据上训练DLKT模型，当问题与一组KC相关联时，通过将每个问题级交互扩展为多个KC级交互，但问题由多个KC响应组成的
+
+步骤2
+
+首先利用学习到的DLKT模型对上述扩展的KC反应数据进行预测，然后通过聚合预测的KC掌握水平输出最终的问题水平预测。 
+
+扩展 在聚合 
+
+为什么会这个样子捏
+
+KC 比问题相比 数据简直太少了的说 
+
+![](https://pic.imgdb.cn/item/6415a988a682492fccb6e909.png)
+
+## 4 训练
 
 ![](https://pic.imgdb.cn/item/63dc966e07d5ca720660dd09.png)
 
@@ -71,11 +98,15 @@ AKT,SAKT,SAINT
 
 标签泄露 注意看结论二
 
-这将导致地面真相的泄漏，因为连续的kc，如kt和kt+1可能与相同的问题相关联，这被称为标签泄漏问题。
+这将导致地面真相的泄漏，因为连续的kc，如kt和kt+1可能与相同的问题相关联，这被称为标签泄漏问题。（类似于 图中的k3 和 k4 先后预测 如果k3 和k4 存在相关关系，就会存在标签泄露问题）
+
+
 
 ## KC聚合
 
 ![](https://pic.imgdb.cn/item/63dc966e07d5ca720660dcfe.png)
+
+<img src="https://pic.imgdb.cn/item/6415a988a682492fccb6e975.jpg" style="zoom:50%;transform:rotate(270deg)" />
 
 ## 一步 和 多步预测
 
@@ -86,6 +117,13 @@ AKT,SAKT,SAINT
 具体来说，提前一步预测任务仅预测学生在给定学生历史交互序列的最后一个问题上的反应。而多步提前预测任务预测学生的反应跨度给定学生的历史交互序列。准确的一步提前预测将极大地改进实时教育推荐系统，多步提前预测将为学习路径选择和构建提供建设性反馈，并帮助教师对未来的教材进行适应性调整。
 
 ![](https://pic.imgdb.cn/item/63dc966e07d5ca720660dd17.png)
+
+## 标准化的数据处理
+
+1. 数据过滤 去除空值和重复值 以及 交互数量小于三的集合 四元组中缺失的也得去掉
+2. 80% 20% 其中 80% 被分成5叠 4叠训练 1叠验证
+3. KC子序列生成用于训练和验证。 当一个问题有一个以上的KCs时，通过重复回答多次将原始问题-响应序列扩展到KC级别，每个KC对应一个KC。 将扩展后的KC水平响应序列截断为长度为m的较短子序列，其中m为预定义的最大训练序列长度。 小于m的序列将由-1 填充
+4.   默认情况下，我们选择使用LF-AVG进行KC预测融合 
 
 ## 结论
 
