--- a/感觉是最好的知识追踪入门提升论文.md
+++ b/感觉是最好的知识追踪入门提升论文.md
@@ -118,7 +118,7 @@ KC 比问题相比 数据简直太少了的说
 
 
 
-<img src="https://pic.imgdb.cn/item/6415a988a682492fccb6e975.jpg" style="zoom:50%;transform:rotate(270deg)" />
+<img src="https://pic.imgdb.cn/item/6415a988a682492fccb6e975.jpg" style="zoom:50%;" />
 
 
 
