--- a/毕业论文思路.md
+++ b/毕业论文思路.md
@@ -55,3 +55,18 @@ jeecgboot：http://doc.jeecg.com/2043874#JAVA_jeecgboot_11
 1. 模型的线上部署
 2. 搜索框的功能完善
 3. 模型的训练的问题
+
+## 我是一个2023/4/6 号的作者
+
+想法没有了
+
+做个双塔吧
+
+1. 一边是知识追踪
+2. 一边是推荐系统
+
+完事儿 
+
+目前 双塔是弄出来了
+
+在看序列推荐之类的文章 准备 caser的变种
