--- a/54号-这一周学习总结.md
+++ b/54号-这一周学习总结.md
@@ -68,7 +68,7 @@ https://zhuanlan.zhihu.com/p/405117499
 以下为三个范式
 
 1. 自监督学习
-2. 对比学习
+2. 对比自监督学习（Contrastive Self-Supervised Learning (SSL) ）
 3. 有标签的监督学习（https://www.bilibili.com/video/BV1MV411q7KU/）
 
 - 一个总结比较好的自监督对比学习综述
@@ -94,3 +94,69 @@ https://zhuanlan.zhihu.com/p/619450183
 - 小插曲 和师兄的聊天
 
 ![](https://pic2.imgdb.cn/item/645863080d2dde57774e7d6e.png)
+
+## 5/9 
+
+中间的78 有一天是给整理自己的文献去了
+
+8 我干了啥 我去看看
+
+应该是一个躺着很舒服 饭后打羽毛球的一天
+
+啊哈哈哈
+
+不多说
+
+目前的目标 是 想通过添加对比的联合学习在上面
+
+今天看了看库
+
+recbole-da 其中数据增强的全都是 序列推荐
+
+- 我看到的第一篇 推荐下的对比学习（召回 双塔模式下）
+
+Self-supervised Learning for Large-scale Item Recommendations
+
+其中的数据增强方法可以看看
+
+![](https://pic2.imgdb.cn/item/645b03860d2dde57770bfa6a.png)
+
+- 自监督学习 
+
+![](https://pic2.imgdb.cn/item/645b03860d2dde57770bfa2d.png)
+
+- coserec 模型训练
+
+在一个大batch中 在前几个batch内做数据增强 对比学习
+
+![](https://pic2.imgdb.cn/item/645b03860d2dde57770bf9f1.png)
+
+- 互信息最大化（MIM）说实话 我没看懂
+
+s3 rec
+
+真的没看懂
+
+![](https://pic2.imgdb.cn/item/645b03860d2dde57770bf99c.png)
+
+- causerec
+![](https://pic2.imgdb.cn/item/645b03860d2dde57770bfabb.png)
+
+这篇老早之前就看过了 有代码 
+
+看了个大概
+
+通过替换 可有可无的概念生成正例
+
+替换 必要的概念 来生成反例
+
+- 找了个 最早的数据增强用在序列推荐的
+
+cl4rec 
+
+https://zhuanlan.zhihu.com/p/478358988
+
+目前看起来最舒服 最简单的方法 
+
+可以复现的那种
+
