--- a/缝合怪-怪怪怪.md
+++ b/缝合怪-怪怪怪.md
@@ -38,3 +38,9 @@ Encoder 的部分：利用Dtransformer中
 2. Dtransformer 中 问题级别的预测是怎么引入 看看代码
 3. 在编码出问题级别的引入 后 如何将该引入去输出结果？
 4. 反向传播代码仔细看看！
+
+## 发现的新问题
+
+1. 在看到论文的时候 Dtransformer 中 评测指标 较 cl4kt中 多 
+2. cl4kt 中数据用的较多 但是评价指标没有 dtransformer多 所以改下main就好了
+
