--- a/教育数据集特征描述.md
+++ b/教育数据集特征描述.md
@@ -32,10 +32,6 @@ type **assistment_id**
 
 **user_id** **sequence_id**  **base_sequence_id** 
 
-1. 感觉没用的
-
-original position
-
 1. 相同相似的
 
 student_class_id 
@@ -52,7 +48,11 @@ assistment_id
 
 **problem_id** 分类特征
 
-**attempt_count** 数值
+**original** 分类特征
+
+**position** 分类特征
+
+**first_action** 分类
 
 **problem_type**（answer_type）分类
 
@@ -60,7 +60,7 @@ assistment_id
 
 **hint_count** 数值
 
-**first_action** 分类
+**attempt_count** 数值
 
 - 目标
 
